# cllaplace

./: CMakeLists.txt  defaults.cc  defaults.hh  laplace.cc  laplace.hh  laplace_jac.cl
clpp/: CMakeLists.txt  FindOpenCL.cmake  buffer.cc  buffer.hh  buffer_internal.hh  clpp.hh  context.cc  context.hh  context_internal.hh  device.cc  device.hh  device_internal.hh  error.cc  error.hh  event.cc  event.hh  event_internal.hh  platform.cc  platform.hh  platform_internal.hh  program.cc  program.hh  program_internal.hh  queue.cc  queue.hh  queue_internal.hh
